--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -1033,6 +1033,14 @@
     "\n",
     "We can compute the gradient of the loss function with respect to the output of the last hidden layer as:\n",
     "> remember your log derivative rules that you forgot\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11801fc7",
+   "metadata": {},
+   "source": [
     "\n",
     "$$\n",
     "\\frac{\\partial \\mathcal{L}}{\\partial A_2} = -\\frac{1}{m} \\sum_i\\left(y_i \\cdot \\frac{\\partial \\log(A_2)}{\\partial A_2} + (1-y_i) \\cdot \\frac{\\partial \\log(1-A_2)}{\\partial A_2}\\right)\\\\\n",
@@ -1047,7 +1055,7 @@
     "$$\n",
     "\n",
     "Where $m$ is the number of samples, $y$ is the true label, and $A_2$ is the output of the last hidden layer.\n",
-    "This expression is the same as the one we found in the previous notebook with the log-loss function. \\\n"
+    "This expression is the same as the one we found in the previous notebook with the log-loss function."
    ]
   },
   {
