--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -895,8 +895,7 @@
     "\n",
     "Really ?\n",
     "\n",
-    "Now that you just found that the relation between the two layers is through the variables $A_1 and $Z_2$, which is $Z_2 = W_2A_1 + b_2$, we developp the term $\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial A_1}$ with the chain rule:\n",
+    "Now that you just found that the relation between the two layers is through the variables $A_1$ and $Z_2$, which is $Z_2 = W_2A_1 + b_2$, we developp the term $\\frac{\\partial \\mathcal{L}}{\\partial A_1}$ with the chain rule:\n",
     "\n",
     "\n",
     "$$\n",
