--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -398,7 +398,9 @@
     "\n",
     "We can write the output of the second layer using the activation function:\n",
     "$$\n",
-    "A_2 = a(Z_2)"
+    "A_2 = a(Z_2)\n",
+    "$$\n",
+    "Where $A_2$ is the output of the second layer, and $a(Z_2)$ is the activation function applied to the output of the second layer."
    ]
   },
   {
