--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -1042,11 +1042,12 @@
    "id": "11801fc7",
    "metadata": {},
    "source": [
-    "$\n",
+    "$$\n",
     "\\frac{\\partial \\mathcal{L}}{\\partial A_2} = -\\frac{1}{m} \\sum_i\\left(y_i \\cdot \\frac{\\partial \\log(A_2)}{\\partial A_2} + (1-y_i) \\cdot \\frac{\\partial \\log(1-A_2)}{\\partial A_2}\\right) \\\\\n",
     "= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i}{A_2} - \\frac{1-y_i}{1-A_2}\\right) \\\\\n",
     "= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i(1-A_2) - (1-y_i)A_2}{A_2(1-A_2)}\\right) \\\\\n",
-    "= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i - A_2}{A_2(1-A_2)}\\right)$\n",
+    "= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i - A_2}{A_2(1-A_2)}\\right)\n",
+    "$$\n",
     "\n",
     "\n",
     "That's why\n",
