--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -1043,10 +1043,12 @@
    "metadata": {},
    "source": [
     "$$\n",
+    "\\begin{aligned}\n",
     "\\frac{\\partial \\mathcal{L}}{\\partial A_2} = -\\frac{1}{m} \\sum_i\\left(y_i \\cdot \\frac{\\partial \\log(A_2)}{\\partial A_2} + (1-y_i) \\cdot \\frac{\\partial \\log(1-A_2)}{\\partial A_2}\\right) \\\\\n",
     "= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i}{A_2} - \\frac{1-y_i}{1-A_2}\\right) \\\\\n",
     "= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i(1-A_2) - (1-y_i)A_2}{A_2(1-A_2)}\\right) \\\\\n",
     "= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i - A_2}{A_2(1-A_2)}\\right)\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "\n",
@@ -1084,10 +1086,12 @@
     "> remember your damn derivative rules ($\\frac{\\partial}{\\partial z} \\frac{1}{u(z)} = \\frac{-1}{u^2} \\cdot \\frac{\\partial u}{\\partial z}$), but here, there's a trick later remember ?\n",
     "\n",
     "$$\n",
+    "\\begin{aligned}\n",
     "\\frac{\\partial a(z)}{\\partial z} = \\frac{\\partial}{\\partial z} \\left(\\frac{1}{1 + e^{-z}}\\right)\\\\\n",
     "= \\frac{-1}{(1 + e^{-z})^2} \\cdot \\frac{\\partial}{\\partial z} (1 + e^{-z})\\\\\n",
-    "= \\frac{-1}{(1 + e^{-z})^2} \\cdot (-e^{-z})\n",
-    "= \\frac{1}{1 + e^{-z}} \\cdot \\frac{e^{-z}}{1 + e^{-z}}\\\\\n",
+    "= \\frac{-1}{(1 + e^{-z})^2} \\cdot (-e^{-z})\\\\\n",
+    "= \\frac{1}{1 + e^{-z}} \\cdot \\frac{e^{-z}}{1 + e^{-z}}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "> And now you can see that the first term is the activation function\n",
     "\n",
@@ -1128,11 +1132,13 @@
     "\n",
     "So now we can write the expression for $dZ_2$ as:\n",
     "$$\n",
+    "\\begin{aligned}\n",
     "dZ_2 = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\\\\n",
     "= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i - A_2}{A_2(1-A_2)}\\right) \\cdot A_2 \\cdot (1 - A_2) \\\\\n",
     "= -\\frac{1}{m} \\sum\\frac{y - A_2}{A_2(1-A_2)} \\cdot A_2 \\cdot (1 - A_2) \\\\\n",
-    "= \\frac{1}{m} \\sum_m (A_2 - y)\n",
+    "= \\frac{1}{m} \\sum_m (A_2 - y)\\\\\n",
     "= A_2 - y\n",
+    "\\end{aligned}\n",
     "$$\n",
     "Where $m$ is the number of samples, $y$ is the true label, and $A_2$ is the output of the last hidden layer.\n",
     "\n",
