--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -1043,12 +1043,12 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\begin{aligned}\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial A_2} = -\\frac{1}{m} \\sum_i\\left(y_i \\cdot \\frac{\\partial \\log(A_2)}{\\partial A_2} + (1-y_i) \\cdot \\frac{\\partial \\log(1-A_2)}{\\partial A_2}\\right) \\\\\n",
-    "= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i}{A_2} - \\frac{1-y_i}{1-A_2}\\right) \\\\\n",
-    "= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i(1-A_2) - (1-y_i)A_2}{A_2(1-A_2)}\\right) \\\\\n",
-    "= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i - A_2}{A_2(1-A_2)}\\right)\n",
-    "\\end{aligned}\n",
+    "\\begin{align}\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial A_2} &= -\\frac{1}{m} \\sum_i\\left(y_i \\cdot \\frac{\\partial \\log(A_2)}{\\partial A_2} + (1-y_i) \\cdot \\frac{\\partial \\log(1-A_2)}{\\partial A_2}\\right) \\\\\n",
+    "&= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i}{A_2} - \\frac{1-y_i}{1-A_2}\\right) \\\\\n",
+    "&= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i(1-A_2) - (1-y_i)A_2}{A_2(1-A_2)}\\right) \\\\\n",
+    "&= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i - A_2}{A_2(1-A_2)}\\right)\n",
+    "\\end{align}\n",
     "$$\n",
     "\n",
     "\n",
@@ -1087,10 +1087,10 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "\\frac{\\partial a(z)}{\\partial z} = \\frac{\\partial}{\\partial z} \\left(\\frac{1}{1 + e^{-z}}\\right)\\\\\n",
-    "= \\frac{-1}{(1 + e^{-z})^2} \\cdot \\frac{\\partial}{\\partial z} (1 + e^{-z})\\\\\n",
-    "= \\frac{-1}{(1 + e^{-z})^2} \\cdot (-e^{-z})\\\\\n",
-    "= \\frac{1}{1 + e^{-z}} \\cdot \\frac{e^{-z}}{1 + e^{-z}}\n",
+    "\\frac{\\partial a(z)}{\\partial z} &= \\frac{\\partial}{\\partial z} \\left(\\frac{1}{1 + e^{-z}}\\right)\\\\\n",
+    "&= \\frac{-1}{(1 + e^{-z})^2} \\cdot \\frac{\\partial}{\\partial z} (1 + e^{-z})\\\\\n",
+    "&= \\frac{-1}{(1 + e^{-z})^2} \\cdot (-e^{-z})\\\\\n",
+    "&= \\frac{1}{1 + e^{-z}} \\cdot \\frac{e^{-z}}{1 + e^{-z}}\n",
     "\\end{aligned}\n",
     "$$\n",
     "> And now you can see that the first term is the activation function\n",
@@ -1101,8 +1101,10 @@
     "> the trick is to bring up the activation on the second term by doing this simple trick: $e^{-z} = e^{-z} + 1 - 1$ \n",
     "\n",
     "$$\n",
-    "= a(z) \\cdot \\frac{e^{-z} + 1 - 1}{1 + e^{-z}}\\\\\n",
-    "= a(z) \\cdot \\frac{1 + e^{-z}}{1 + e^{-z}} \\cdot \\frac{-1}{1 + e^{-z}}\\\\\n",
+    "\\begin{align}\n",
+    "&= a(z) \\cdot \\frac{e^{-z} + 1 - 1}{1 + e^{-z}}\\\\\n",
+    "&= a(z) \\cdot \\frac{1 + e^{-z}}{1 + e^{-z}} \\cdot \\frac{-1}{1 + e^{-z}}\n",
+    "\\end{align}\n",
     "$$\n",
     "> we can see the activation again, and the whole thing is simplified to:\n",
     "\n",
@@ -1133,11 +1135,11 @@
     "So now we can write the expression for $dZ_2$ as:\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "dZ_2 = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\\\\n",
-    "= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i - A_2}{A_2(1-A_2)}\\right) \\cdot A_2 \\cdot (1 - A_2) \\\\\n",
-    "= -\\frac{1}{m} \\sum\\frac{y - A_2}{A_2(1-A_2)} \\cdot A_2 \\cdot (1 - A_2) \\\\\n",
-    "= \\frac{1}{m} \\sum_m (A_2 - y)\\\\\n",
-    "= A_2 - y\n",
+    "dZ_2 &= \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\\\\n",
+    "&= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i - A_2}{A_2(1-A_2)}\\right) \\cdot A_2 \\cdot (1 - A_2) \\\\\n",
+    "&= -\\frac{1}{m} \\sum\\frac{y - A_2}{A_2(1-A_2)} \\cdot A_2 \\cdot (1 - A_2) \\\\\n",
+    "&= \\frac{1}{m} \\sum_m (A_2 - y)\\\\\n",
+    "&= A_2 - y\n",
     "\\end{aligned}\n",
     "$$\n",
     "Where $m$ is the number of samples, $y$ is the true label, and $A_2$ is the output of the last hidden layer.\n",
