--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -1043,12 +1043,12 @@
    "metadata": {},
    "source": [
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{aligned}\n",
     "\\frac{\\partial \\mathcal{L}}{\\partial A_2} &= -\\frac{1}{m} \\sum_i\\left(y_i \\cdot \\frac{\\partial \\log(A_2)}{\\partial A_2} + (1-y_i) \\cdot \\frac{\\partial \\log(1-A_2)}{\\partial A_2}\\right) \\\\\n",
     "&= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i}{A_2} - \\frac{1-y_i}{1-A_2}\\right) \\\\\n",
     "&= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i(1-A_2) - (1-y_i)A_2}{A_2(1-A_2)}\\right) \\\\\n",
     "&= -\\frac{1}{m} \\sum_i\\left(\\frac{y_i - A_2}{A_2(1-A_2)}\\right)\n",
-    "\\end{align}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "\n",
     "\n",
@@ -1101,10 +1101,10 @@
     "> the trick is to bring up the activation on the second term by doing this simple trick: $e^{-z} = e^{-z} + 1 - 1$ \n",
     "\n",
     "$$\n",
-    "\\begin{align}\n",
+    "\\begin{aligned}\n",
     "&= a(z) \\cdot \\frac{e^{-z} + 1 - 1}{1 + e^{-z}}\\\\\n",
     "&= a(z) \\cdot \\frac{1 + e^{-z}}{1 + e^{-z}} \\cdot \\frac{-1}{1 + e^{-z}}\n",
-    "\\end{align}\n",
+    "\\end{aligned}\n",
     "$$\n",
     "> we can see the activation again, and the whole thing is simplified to:\n",
     "\n",
