--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -958,10 +958,12 @@
     "$$\n",
     "\\left\\{\n",
     "\\begin{aligned}\n",
+    "\\begin{align}\n",
     "\\frac{\\partial \\mathcal{L}}{\\partial W_2} &= dZ_2 \\cdot \\frac{\\partial Z_2}{\\partial W_2} \\\\\n",
     "\\frac{\\partial \\mathcal{L}}{\\partial b_2} &= dZ_2 \\cdot \\frac{\\partial Z_2}{\\partial b_2} \\\\\n",
     "\\frac{\\partial \\mathcal{L}}{\\partial W_1} &= dZ_1 \\cdot \\frac{\\partial Z_1}{\\partial W_1} \\\\\n",
     "\\frac{\\partial \\mathcal{L}}{\\partial b_1} &= dZ_1 \\cdot \\frac{\\partial Z_1}{\\partial b_1}\n",
+    "\\end{align}\n",
     "\\end{aligned}\n",
     "\\right.\n",
     "$$\n",
@@ -970,11 +972,21 @@
     "$$\n",
     "\\left\\{\n",
     "\\begin{aligned}\n",
+    "\\begin{align}\n",
     "dZ_2 &= \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\\\\n",
     "dZ_1 &= dZ_2 \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1}\n",
+    "\\end{align}\n",
     "\\end{aligned}\n",
     "\\right.\n",
     "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba18404c",
+   "metadata": {},
+   "source": [
+    "We can say from here that our strategy will be to compute $dZ_2$ first to get $\\frac{\\partial \\mathcal{L}}{\\partial W_2}$ and $\\frac{\\partial \\mathcal{L}}{\\partial b_2}$, and then compute $dZ_1$ to get $\\frac{\\partial \\mathcal{L}}{\\partial W_1}$ and $\\frac{\\partial \\mathcal{L}}{\\partial b_1}$."
    ]
   },
   {
@@ -1158,6 +1170,54 @@
   {
    "cell_type": "markdown",
    "id": "c9c0e42a",
+   "metadata": {},
+   "source": [
+    "Now we will get  $[\\frac{\\partial \\mathcal{L}}{\\partial W_2} = dZ_2 \\cdot \\frac{\\partial Z_2}{\\partial W_2}]$ and $[\\frac{\\partial \\mathcal{L}}{\\partial b_2} = dZ_2 \\cdot \\frac{\\partial Z_2}{\\partial b_2}]$\n",
+    "\n",
+    "> I want you to look at the different equations we highlighted before to understand the relation between the different variables and find the wanted gradients."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fb9a5a2",
+   "metadata": {},
+   "source": [
+    "We get $\\frac{\\partial Z_2}{\\partial W_2}$ from the model of the second layer:\n",
+    "$$\n",
+    "\\frac{\\partial Z_2}{\\partial W_2} = A_1\n",
+    "$$\n",
+    "Where $A_1$ is the output of the first layer.\n",
+    "\n",
+    "We can write the expression for $\\frac{\\partial Z_2}{\\partial b_2}$ as:\n",
+    "$$\n",
+    "\\frac{\\partial Z_2}{\\partial b_2} = 1\n",
+    "$$\n",
+    "Where $1$ is the bias of the second layer.\n",
+    "So now we can write the expression for $\\frac{\\partial \\mathcal{L}}{\\partial W_2}$ and $\\frac{\\partial \\mathcal{L}}{\\partial b_2}$ as:\n",
+    "$$\n",
+    "\\left\\{\n",
+    "\\begin{aligned}\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial W_2} &= dZ_2 \\cdot A_1 \\\\\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial b_2} &= dZ_2 \\cdot 1\n",
+    "\\end{aligned}\n",
+    "\\right.\n",
+    "$$\n",
+    "Where $dZ_2 = A_2 - y$ is the gradient of the loss function with respect to the output of the last hidden layer, and $A_1$ is the output of the first layer.\n",
+    "We can write the expression for $\\frac{\\partial \\mathcal{L}}{\\partial W_2}$ and $\\frac{\\partial \\mathcal{L}}{\\partial b_2}$ as:\n",
+    "$$\n",
+    "\\left[\n",
+    "\\begin{aligned}\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial W_2} &= (A_2 - y) \\cdot A_1 \\\\\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial b_2} &= (A_2 - y)\n",
+    "\n",
+    "\\end{aligned}\n",
+    "\\right]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e2fbe27",
    "metadata": {},
    "source": []
   }
