--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -986,7 +986,7 @@
    "id": "ba18404c",
    "metadata": {},
    "source": [
-    "We can say from here that our strategy will be to compute $dZ_2$ first to get $\\frac{\\partial \\mathcal{L}}{\\partial W_2}$ and $\\frac{\\partial \\mathcal{L}}{\\partial b_2}$, and then compute $dZ_1$ to get $\\frac{\\partial \\mathcal{L}}{\\partial W_1}$ and $\\frac{\\partial \\mathcal{L}}{\\partial b_1}$."
+    "From here that our strategy will be to compute $dZ_2$ first to get $\\frac{\\partial \\mathcal{L}}{\\partial W_2}$ and $\\frac{\\partial \\mathcal{L}}{\\partial b_2}$, and then compute $dZ_1$ to get $\\frac{\\partial \\mathcal{L}}{\\partial W_1}$ and $\\frac{\\partial \\mathcal{L}}{\\partial b_1}$."
    ]
   },
   {
@@ -1066,7 +1066,9 @@
     "\n",
     "That's why\n",
     "$$\n",
-    "\\left[\\frac{\\partial \\mathcal{L}}{\\partial A_2} = -\\frac{1}{m} \\sum_i\\left(\\frac{y_i - A_2}{A_2(1-A_2)}\\right)\\right]\n",
+    "\\left\\{\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial A_2} = -\\frac{1}{m} \\sum_i\\left(\\frac{y_i - A_2}{A_2(1-A_2)}\\right)\n",
+    "\\right.\n",
     "$$\n",
     "\n",
     "Where $m$ is the number of samples, $y$ is the true label, and $A_2$ is the output of the last hidden layer.\n",
@@ -1141,7 +1143,9 @@
     "$$\n",
     "That's why \n",
     "$$\n",
-    "\\left[\\frac{\\partial A_2}{\\partial Z_2} = A_2 \\cdot (1 - A_2)\\right]\n",
+    "\\left\\{\n",
+    "\\frac{\\partial A_2}{\\partial Z_2} = A_2 \\cdot (1 - A_2)\n",
+    "\\right.\n",
     "$$\n",
     "\n",
     "So now we can write the expression for $dZ_2$ as:\n",
@@ -1162,9 +1166,18 @@
     "But we don't forget about the sum and the division by $m$: we will take care of that later when we update the model parameters.\n",
     "\n",
     "So we can write the expression for $dZ_2$ as:\n",
+    "\n",
     "$$\n",
-    "\\left[dZ_2 = A_2 - y\\right]\n",
+    "\\bm{\\left[ dZ_2 = A_2 - y \\right]}\n",
     "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9189d5c",
+   "metadata": {},
+   "source": [
+    "## $\\frac{\\partial \\mathcal{L}}{\\partial W_2}$ and $\\frac{\\partial \\mathcal{L}}{\\partial b_2}$"
    ]
   },
   {
@@ -1203,13 +1216,18 @@
     "\\right.\n",
     "$$\n",
     "Where $dZ_2 = A_2 - y$ is the gradient of the loss function with respect to the output of the last hidden layer, and $A_1$ is the output of the first layer.\n",
-    "We can write the expression for $\\frac{\\partial \\mathcal{L}}{\\partial W_2}$ and $\\frac{\\partial \\mathcal{L}}{\\partial b_2}$ as:\n",
+    "\n",
+    "Now we recover the factor $\\frac{1}{m}$ that was left earlier.\\\n",
+    "About the sum: \n",
+    "- the sum is already included in the matrix product between $dZ_2$ and $A_1$\n",
+    "- however, we will include it for the bias, because the bias is a scalar and not a vector. (no matrix product to include the sum)\n",
+    "\n",
+    "That's why the final expressions of the gradients of the second $\\frac{\\partial \\mathcal{L}}{\\partial W_2}$ and $\\frac{\\partial \\mathcal{L}}{\\partial b_2}$ layer are:\n",
     "$$\n",
     "\\left[\n",
     "\\begin{aligned}\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial W_2} &= (A_2 - y) \\cdot A_1 \\\\\n",
-    "\\frac{\\partial \\mathcal{L}}{\\partial b_2} &= (A_2 - y)\n",
-    "\n",
+    "\\mathbf{\\frac{\\partial \\mathcal{L}}{\\partial W_2}} &= \\mathbf{\\frac{1}{m} (A_2 - y) \\cdot A_1} \\\\\n",
+    "\\mathbf{\\frac{\\partial \\mathcal{L}}{\\partial b_2}} &= \\mathbf{\\frac{1}{m} \\sum_m{(A_2 - y)}}\n",
     "\\end{aligned}\n",
     "\\right]\n",
     "$$"
@@ -1218,6 +1236,133 @@
   {
    "cell_type": "markdown",
    "id": "3e2fbe27",
+   "metadata": {},
+   "source": [
+    "## $dZ_1$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "96da9ee7",
+   "metadata": {},
+   "source": [
+    "Let's compute $dZ_1$ to get $\\frac{\\partial \\mathcal{L}}{\\partial W_1}$ and $\\frac{\\partial \\mathcal{L}}{\\partial b_1}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3bb485af",
+   "metadata": {},
+   "source": [
+    "Its expression is:\n",
+    "$$\n",
+    "dZ_1 = dZ_2 \\cdot \\frac{\\partial Z_2}{\\partial A_1} \\cdot \\frac{\\partial A_1}{\\partial Z_1}\n",
+    "$$\n",
+    "Where $dZ_2$ is the gradient of the loss function with respect to the output of the last hidden layer, $\\frac{\\partial Z_2}{\\partial A_1}$ is the gradient of the model with respect to the output of the first layer, and $\\frac{\\partial A_1}{\\partial Z_1}$ is the gradient of the activation function with respect to its input."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d60744ee",
+   "metadata": {},
+   "source": [
+    "> Which equation do we need to compute $\\frac{\\partial Z_2}{\\partial A_1}$ ?\n",
+    "\n",
+    "Good. So let's write the expression for $\\frac{\\partial Z_2}{\\partial A_1}$ as:\n",
+    "$$\n",
+    "\\frac{\\partial Z_2}{\\partial A_1} = W_2\n",
+    "$$\n",
+    "Where $W_2$ is the weight matrix of the second layer.\n",
+    "\n",
+    "For $\\frac{\\partial A_1}{\\partial Z_1}$ it is the same logic as for $\\frac{\\partial A_2}{\\partial Z_2}$, that's why we can write:\n",
+    "$$\n",
+    "\\frac{\\partial A_1}{\\partial Z_1} = A_1 \\cdot (1 - A_1)\n",
+    "$$\n",
+    "Where $A_1$ is the output of the first layer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9faa4122",
+   "metadata": {},
+   "source": [
+    "So now we can write the expression for $dZ_1$ as:\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "\\left[\\mathbf{dZ_1} = \\mathbf{dZ_2 \\cdot W_2 \\cdot A_1 \\cdot (1 - A_1)}\\right]\n",
+    "\\end{aligned}\n",
+    "$$\n",
+    "Where $dZ_2 = A_2 - y$ is the gradient of the loss function with respect to the output of the last hidden layer, $W_2$ is the weight matrix of the second layer, and $A_1$ is the output of the first layer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ede33d06",
+   "metadata": {},
+   "source": [
+    "## $\\frac{\\partial \\mathcal{L}}{\\partial W_1}$ and $\\frac{\\partial \\mathcal{L}}{\\partial b_1}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3098e5e",
+   "metadata": {},
+   "source": [
+    "With $dZ_1$ we can compute $\\frac{\\partial \\mathcal{L}}{\\partial W_1} = dZ_1 \\cdot \\frac{\\partial Z_1}{\\partial W_1}$ and $\\frac{\\partial \\mathcal{L}}{\\partial b_1} = dZ_1 \\cdot \\frac{\\partial Z_1}{\\partial b_1}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9221965",
+   "metadata": {},
+   "source": [
+    "> I want you to look at the different equations we highlighted before to understand the relation between the different variables and find the wanted gradients."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed6172a9",
+   "metadata": {},
+   "source": [
+    "For $\\frac{\\partial Z_1}{\\partial W_1}$ we can write:\n",
+    "$$\n",
+    "\\frac{\\partial Z_1}{\\partial W_1} = X\n",
+    "$$\n",
+    "Where $X$ is the input data.\n",
+    "\n",
+    "For $\\frac{\\partial Z_1}{\\partial b_1}$ we can write:\n",
+    "$$\n",
+    "\\frac{\\partial Z_1}{\\partial b_1} = 1\n",
+    "$$\n",
+    "Where $1$ is the bias of the first layer.\n",
+    "\n",
+    "So now we can write the expression for $\\frac{\\partial \\mathcal{L}}{\\partial W_1}$ and $\\frac{\\partial \\mathcal{L}}{\\partial b_1}$ as:\n",
+    "$$\n",
+    "\\left\\{\n",
+    "\\begin{aligned}\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial W_1} &= dZ_1 \\cdot X \\\\\n",
+    "\\frac{\\partial \\mathcal{L}}{\\partial b_1} &= dZ_1 \\cdot 1\n",
+    "\\end{aligned}\n",
+    "\\right.\n",
+    "$$\n",
+    "Where $dZ_1$ is the gradient of the loss function with respect to the output of the first layer, and $X$ is the input data.\n",
+    "\n",
+    "Don't forget to include the factor $\\frac{1}{m}$ amd the sum for the same reason as before.\\\n",
+    "We can write the expression for $\\frac{\\partial \\mathcal{L}}{\\partial W_1}$ and $\\frac{\\partial \\mathcal{L}}{\\partial b_1}$ as:\n",
+    "$$\n",
+    "\\left[\n",
+    "\\begin{aligned}\n",
+    "\\mathbf{\\frac{\\partial \\mathcal{L}}{\\partial W_1}} &= \\mathbf{\\frac{1}{m} dZ_1 \\cdot X} \\\\\n",
+    "\\mathbf{\\frac{\\partial \\mathcal{L}}{\\partial b_1}} &= \\mathbf{\\frac{1}{m} \\sum_m{dZ_1}}\n",
+    "\\end{aligned}\n",
+    "\\right]\n",
+    "$$\n",
+    "Where $dZ_1 = dZ_2 \\cdot W_2 \\cdot A_1 \\cdot (1 - A_1)$ is the gradient of the loss function with respect to the output of the first layer, and $X$ is the input data.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97360684",
    "metadata": {},
    "source": []
   }
