--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -1362,7 +1362,45 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cedc48ce",
+   "metadata": {},
+   "source": [
+    "## Summary of the gradients"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "97360684",
+   "metadata": {},
+   "source": [
+    "Here it is, no more equations, no more math, no more calculus.\n",
+    "\n",
+    "We have all the gradients we need to update the weights and biases of the neural network.\\\n",
+    "We can write the final expressions for the gradients of the loss function with respect to the weights and biases of the neural network as:\n",
+    "$$\n",
+    "\\left[\n",
+    "\\begin{aligned}\n",
+    "\\mathbf{\\frac{\\partial \\mathcal{L}}{\\partial W_2}} &= \\mathbf{\\frac{1}{m} (A_2 - y) \\cdot A_1} \\\\\n",
+    "\\mathbf{\\frac{\\partial \\mathcal{L}}{\\partial b_2}} &= \\mathbf{\\frac{1}{m} \\sum_m{(A_2 - y)}} \\\\\n",
+    "\\mathbf{\\frac{\\partial \\mathcal{L}}{\\partial W_1}} &= \\mathbf{\\frac{1}{m} dZ_1 \\cdot X} \\\\\n",
+    "\\mathbf{\\frac{\\partial \\mathcal{L}}{\\partial b_1}} &= \\mathbf{\\frac{1}{m} \\sum_m{dZ_1}}\n",
+    "\\end{aligned}\n",
+    "\\right]\n",
+    "$$\n",
+    "With the terms:\n",
+    "$$\n",
+    "\\left[\n",
+    "\\begin{aligned}\n",
+    "\\mathbf{dZ_2} &= \\mathbf{A_2 - y} \\\\\n",
+    "\\mathbf{dZ_1} &= \\mathbf{dZ_2 \\cdot W_2 \\cdot A_1 \\cdot (1 - A_1)}\n",
+    "\\end{aligned}\n",
+    "\\right]\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "613d108f",
    "metadata": {},
    "source": []
   }
