--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -10,6 +10,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "44d5cb29",
+   "metadata": {},
+   "source": [
+    "Hi there, you just made the decision to understand the theory of neural networks. It is gonna be tough, but you will be amazed and true to yourself.\\\n",
+    "This is the message at the end of this notebook : "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2333362d",
+   "metadata": {},
+   "source": [
+    "\"\n",
+    "### I know what you thinking:\n",
+    "> \"Those equations are ugly as hell\"\n",
+    "\n",
+    "But two things to say:\n",
+    "1. I don't care, I'm showing you the real stuff, we are not in a fashion show here.\n",
+    "2. You only need to do this ONCE\n",
+    "\n",
+    "Indeed, a data scientist is not a mathematician, and he never does the math by hand. \\\n",
+    "He uses libraries to do the math for him.\n",
+    "\n",
+    "So you only need to make this work once to truly understand how it works, after what you are good to go.\n",
+    "\n",
+    "But that's the beauty of it: a few people understand how it works, and the ones who do are the ones who will be able to create their own models and architectures.\n",
+    "\n",
+    "\"\n",
+    "\n",
+    "No more talking, let's get started with the theory of neural networks :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "990a42bd",
    "metadata": {},
    "source": [
@@ -1401,6 +1435,26 @@
   {
    "cell_type": "markdown",
    "id": "613d108f",
+   "metadata": {},
+   "source": [
+    "I know what you thinking:\n",
+    "> \"Those equations are ugly as hell\"\n",
+    "\n",
+    "But two things to say:\n",
+    "1. I don't care, I'm showing you the real stuff, we are not in a fashion show here.\n",
+    "2. You only need to do this ONCE\n",
+    "\n",
+    "Indeed, a data scientist is not a mathematician, and he never does the math by hand. \\\n",
+    "He uses libraries to do the math for him.\n",
+    "\n",
+    "So you only need to make this work once to truly understand how it works, after what you are good to go.\n",
+    "\n",
+    "But that's the beauty of it: a few people understand how it works, and the ones who do are the ones who will be able to create their own models and architectures.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2feb0b33",
    "metadata": {},
    "source": []
   }
