--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -99,7 +99,7 @@
    "id": "2fea7f57",
    "metadata": {},
    "source": [
-    "> We are doing a neural network from scratch, using mathematics, matrix calculations, and 30min. Let's go."
+    "> We are doing a neural network from scratch, using mathematics, matrix calculations. Let's go."
    ]
   },
   {
@@ -117,7 +117,7 @@
    "source": [
     "We aren't here to waste out time. So let's take the previous neuron that we built, and duplicate this bad boy.\n",
     "\n",
-    "Let's call the first neuron $N_1$ and the second one $N_2$, and put them together in a layer.\n",
+    "Let's call the first neuron $N_1$ and the same second one $N_2$, and put them together in a layer.\n",
     "\n",
     "### Layer\n",
     "We can think of a layer as a collection of neurons that work together to process the input data. \\\n",
@@ -147,7 +147,7 @@
    "id": "e04a16b0",
    "metadata": {},
    "source": [
-    "The same input data $x = (x_1, x_2)$ are going through both neurons at the same time, so we have two outputs $z_1$ and $z_2$.\n",
+    "The same input data $x = (x_1, x_2)$ are going through both neurons at the same time, so we have simultaneously two outputs $z_1$ and $z_2$.\n",
     "\n",
     "We can write this as a matrix multiplication.\n",
     "$$\n",
@@ -203,7 +203,7 @@
    "source": [
     "### Activation function\n",
     "Now, we need to apply an activation function to the output of each neuron. \\\n",
-    "Remember, The activation function is transforms the output of the neuron to introduce non-linearity into the model. \\\n",
+    "Remember, The activation function transforms the output of the neuron to introduce non-linearity into the model. \\\n",
     "We can use the same activation function for both neurons, or we can use different activation functions. \\\n",
     "In this case, we will use the sigmoid activation function for both neurons.\n",
     "$$\n",
@@ -583,6 +583,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d73618a",
+   "metadata": {},
+   "source": [
+    "> try to find the same expression as in the the photo below to assure yourlsef you know hoz the matrix multiplication works. If not, check on the internet, it's very important to understand how the matrix multiplication works."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "dd4346c4",
@@ -632,12 +640,12 @@
    "id": "e88e1efd",
    "metadata": {},
    "source": [
-    "To finish with this neural, we can add the last layer with one neuron, which will be the output neuron.\n",
+    "To finish with this neural network, we can add the last layer with one neuron, which will be the output neuron.\n",
     "\n",
     "### Output Layer and Final Output\n",
     "The output layer is the last layer of the neural network. It takes the output of the last hidden layer and produces the final output of the neural network.\n",
     "\n",
-    "The output layer can have one or more neurons, depending on the problem we are trying to solve. In this case, we will have one neuron in the output layer."
+    "The output layer can have one or more neurons, depending on the problem we are trying to solve (you want one or multiple outputs ?). In this case, we will have one neuron in the output layer."
    ]
   },
   {
@@ -687,12 +695,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54c693be",
+   "id": "e9a8123a",
    "metadata": {},
    "source": [
-    "In other words :\n",
-    "> adding neuron = playing with existant weight matrix and bias vector. \\\n",
-    "> adding layer = creating a new weight matrix and bias vector."
+    "Here, the final output of the neural network is $A_3$, which is the output of the activation function applied to the output of the last layer."
    ]
   },
   {
@@ -701,6 +707,10 @@
    "metadata": {},
    "source": [
     "### Summary\n",
+    "\n",
+    "> adding neuron = playing with existant weight matrix and bias vector. \\\n",
+    "> adding layer = creating a new weight matrix and bias vector.\n",
+    "\n",
     "- The first layer takes the input data $x$ and produces the output $A_1$.\n",
     "- Each layer between the input and output layers takes the output $A_{i-1}$ of the previous layer as its input and produces its own output $A_{i}$.\n",
     "- The output of the last layer is the final output of the neural network.\n",
@@ -721,7 +731,7 @@
    "id": "d659cdd5",
    "metadata": {},
    "source": [
-    "The process of passing the input data through the neural network to obtain the final output is called forward propagation. \\\n",
+    "The process of passing the input data through the neural network from the input layer to the output layer is called forward propagation. \\\n",
     "In forward propagation, we compute the output of each layer in sequence, starting from the input layer and moving through the hidden layers to the output layer. \\\n",
     "The final output of the neural network is the output of the last layer, which can be used for prediction or classification tasks.\n",
     "\n",
@@ -733,7 +743,7 @@
    "id": "ef24d783",
    "metadata": {},
    "source": [
-    "But now we need to train the neural network, how to do that?\n",
+    "**But now we need to train the neural network, how to do that?**\\\n",
     "Easy peasy, you know how to do that. How did we train our first neuron? The perceptron model? remember?\n",
     "\n",
     "We defined a loss function, and we used gradient descent to minimize the loss function by updating the weights and biases (the parameters) of the neuron.\n",
@@ -741,8 +751,8 @@
     "Why not do the same thing here? What changed?\n",
     "\n",
     "I will give you two answers:\n",
-    "1. nothing\n",
-    "2. matrix\n",
+    "1. nothing has changed\n",
+    "2. now we have the matrices\n",
     "\n",
     "So we are going to do the same thing, but with matrices."
    ]
@@ -794,6 +804,16 @@
     "$$\n",
     "Where $\\mathcal{L}$ is the loss function, $W_1$ and $b_1$ are the weights and biases of the first layer, and $W_2$ and $b_2$ are the weights and biases of the second layer.\n",
     "We will use the chain rule to find these gradients, just like we did for the perceptron model.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d19996d",
+   "metadata": {},
+   "source": [
+    "> read carefully the next part, the whole work is based on these functions. \n",
+    "> I don't care about the equations (still, just a bit lol), I care about the functions.\n",
+    "> I care about how the differents parameters and variables are linked together. Understand this and you will understand every neural network."
    ]
   },
   {
