--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -811,8 +811,8 @@
    "id": "0d19996d",
    "metadata": {},
    "source": [
-    "> read carefully the next part, the whole work is based on these functions. \n",
-    "> I don't care about the equations (still, just a bit lol), I care about the functions.\n",
+    "> read carefully the next part, the whole work is based on these functions. \\\n",
+    "> I don't care about the equations (still, just a bit lol), I care about the functions.\\\n",
     "> I care about how the differents parameters and variables are linked together. Understand this and you will understand every neural network."
    ]
   },
