--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -811,9 +811,10 @@
    "id": "0d19996d",
    "metadata": {},
    "source": [
-    "> read carefully the next part, the whole work is based on these functions. \\\n",
+    "> read carefully the next part, the whole work is based on these functions. \n",
+    "\n",
     "> I don't care about the equations (still, just a bit lol), I care about the functions.\\\n",
-    "> I care about how the differents parameters and variables are linked together. Understand this and you will understand every neural network."
+    "> I care about how the differents parameters are linked together. Understand this and you will understand every neural network."
    ]
   },
   {
@@ -866,6 +867,8 @@
     "### Important\n",
     "Finding all the gradients means identifying how $\\mathcal{L}$ relates to all the other parameters. But as you've seen here, the entry point between $\\mathcal{L}$ and all the other parameters is $A_2$. This means that even to compute the gradients of the first layer, we have to go through $A_2$ — the second layer.\n",
     "\n",
+    "This is the key point of backpropagation: we have to go through all the layers in reverse order to compute the gradients of the loss function with respect to the weights and biases of each layer.\n",
+    "\n",
     "When you think about it, it actually makes perfect sense: that’s the whole point of neural networks — to pass through multiple layers in order to build complexity and give the model more \"intelligence\".\n"
    ]
   },
@@ -894,6 +897,7 @@
     "$$\n",
     "\n",
     "Where $\\frac{\\partial \\mathcal{L}}{\\partial A_2}$ is the gradient of the loss function with respect to the output of the last hidden layer, $\\frac{\\partial A_2}{\\partial Z_2}$ is the gradient of the activation function with respect to its input, and $\\frac{\\partial Z_2}{\\partial W_2}$ and $\\frac{\\partial Z_2}{\\partial b_2}$ are the gradients of the model with respect to the weights and biases of the second layer.\n",
+    "\n",
     "We can see that the first term is the same for both equations, so we gonna simplyfy it by calling it $dZ_2$.\n",
     "\n",
     "$$\n",
@@ -939,7 +943,7 @@
     "\n",
     "As I said before, we need to go through $A_2$ to compute the gradients of the first layer because there is no direct relation between $\\mathcal{L}$ and $A_1$ !\n",
     "\n",
-    "How can we find the relation between the second layer and the first layer?\n",
+    "**How can we find the relation between the second layer and the first layer?**\n",
     "\n",
     "Easy: what is the output of the first layer and the input of the second layer?\n",
     "\n",
@@ -953,10 +957,21 @@
     "\n",
     "Now that you just found that the relation between the two layers is through the variables $A_1$ and $Z_2$, which is $Z_2 = W_2A_1 + b_2$, we developp the term $\\frac{\\partial \\mathcal{L}}{\\partial A_1}$ with the chain rule:\n",
     "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1209f9f1",
+   "metadata": {},
+   "source": [
     "$$\n",
     "\\frac{\\partial \\mathcal{L}}{\\partial A_1} = \\frac{\\partial \\mathcal{L}}{\\partial A_2} \\cdot \\frac{\\partial A_2}{\\partial Z_2} \\cdot \\frac{\\partial Z_2}{\\partial A_1}\n",
     "$$\n",
+    "\n",
+    "> What we just did is crazy: we didn't have any direct relation between $\\mathcal{L}$ and $A_1$, but we found a way to compute the gradients of $A_1$ by going through $A_2$ and $dZ_2$ because they link the whole.\n",
+    "\n",
+    "> In other words: we didn't have any direct relation between the first layer and the loss function, but we found a way to compute the gradients of the first layer by going through the second layer. \\\n",
     "\n",
     "So now, the entire expression for the gradients of the first layer is:\n",
     "$$\n",
@@ -968,7 +983,7 @@
     "\\right.\n",
     "$$\n",
     "\n",
-    "Which is pretty long, but I ain't gonna lie to you and saying Deep Learning is simple, otherwise everybody would be a data scientist. Oh sorry, everybody is data scientist on LinkedIn. I meant everybody would a REAL and HONEST data scientist."
+    "Which is pretty long, but I ain't gonna lie to you and saying Deep Learning is simple, otherwise everybody would be a data scientist. Oh sorry, everybody is data scientist on LinkedIn. I meant everybody would be a REAL and HONEST data scientist."
    ]
   },
   {
@@ -977,7 +992,6 @@
    "metadata": {},
    "source": [
     "But still, we can simplify this a bit.\n",
-    "We can write the entire expression as:\n",
     "\n",
     "Indeed, we can see that the first term is the same for both equations, so we gonna simplyfy it by calling it $dZ_1$.\n",
     "\n",
@@ -1040,7 +1054,7 @@
    "id": "ba18404c",
    "metadata": {},
    "source": [
-    "From here that our strategy will be to compute $dZ_2$ first to get $\\frac{\\partial \\mathcal{L}}{\\partial W_2}$ and $\\frac{\\partial \\mathcal{L}}{\\partial b_2}$, and then compute $dZ_1$ to get $\\frac{\\partial \\mathcal{L}}{\\partial W_1}$ and $\\frac{\\partial \\mathcal{L}}{\\partial b_1}$."
+    "From here, our strategy will be to compute $dZ_2$ first to get $\\frac{\\partial \\mathcal{L}}{\\partial W_2}$ and $\\frac{\\partial \\mathcal{L}}{\\partial b_2}$, and then compute $dZ_1$ to get $\\frac{\\partial \\mathcal{L}}{\\partial W_1}$ and $\\frac{\\partial \\mathcal{L}}{\\partial b_1}$."
    ]
   },
   {
@@ -1090,11 +1104,11 @@
     "Maan.. it's the same expression we found in the previous notebook with the log-loss function. \n",
     "\n",
     "Okay let's quickly recap this expression. But this is the only time I will recap something from previous notebook, after what I'm not gonna hold your hand anymore. I'm not your mom for god's sake.\n",
-    "> The log-loss function is a measure of how well the model's predicted probabilities match the true labels.\n",
+    "> The loss function is a measure of how well the model's predicted probabilities match the true labels.\n",
     "\n",
     "Ok so the log-loss function in this neural network is defined as:\n",
     "$$\n",
-    "\\mathcal{L} = -\\frac{1}{m} \\sum_i\\left(\\frac{y_i - A_2}{A_2(1-A_2)}\\right)\n",
+    "\\mathcal{L} = -\\frac{1}{m} \\sum_i\\left(y_i \\log(A_2)+(1-y_i) \\log(1-A_2)\\right)\n",
     "$$\n",
     ">remember that we use the predictions $A_2$ as the output of the neural network to compare these final predictions with the true labels $y_i$.\n",
     "\n",
