--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -1139,8 +1139,7 @@
     "\\right.\n",
     "$$\n",
     "\n",
-    "Where $m$ is the number of samples, $y$ is the true label, and $A_2$ is the output of the last hidden layer.\n",
-    "This expression is the same as the one we found in the previous notebook with the log-loss function."
+    "Where $m$ is the number of samples, $y$ is the true label, and $A_2$ is the output of the last hidden layer."
    ]
   },
   {
@@ -1178,17 +1177,17 @@
     "> And now you can see that the first term is the activation function\n",
     "\n",
     "$$\n",
-    "= a(z) \\cdot \\frac{e^{-z}}{1 + e^{-z}}\\\\\n",
+    "= a(z) \\cdot \\frac{1}{1 + e^{-z}}\\\\\n",
     "$$\n",
     "> the trick is to bring up the activation on the second term by doing this simple trick: $e^{-z} = e^{-z} + 1 - 1$ \n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
     "&= a(z) \\cdot \\frac{e^{-z} + 1 - 1}{1 + e^{-z}}\\\\\n",
-    "&= a(z) \\cdot \\frac{1 + e^{-z}}{1 + e^{-z}} \\cdot \\frac{-1}{1 + e^{-z}}\n",
+    "&= a(z) \\cdot (\\frac{1 + e^{-z}}{1 + e^{-z}} - \\frac{1}{1 + e^{-z}})\n",
     "\\end{aligned}\n",
     "$$\n",
-    "> we can see the activation again, and the whole thing is simplified to:\n",
+    "> the first term in the parentheses simplifies to 1, and we can see the activation for the second term\n",
     "\n",
     "$$\n",
     "= a(z) \\cdot (1 - a(z))\\\\\n",
@@ -1236,8 +1235,9 @@
     "So we can write the expression for $dZ_2$ as:\n",
     "\n",
     "$$\n",
-    "\\bm{\\left[ dZ_2 = A_2 - y \\right]}\n",
-    "$$\n"
+    "\\mathbf{\\left[ dZ_2 = A_2 - y \\right]}\n",
+    "$$\n",
+    "\n"
    ]
   },
   {
