--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -1230,7 +1230,7 @@
     "Why can we write this : $\\frac{1}{m} \\sum_m (A_2 - y) = A_2 - y$ ?\n",
     "\n",
     "Let's say it's because we are working with a single sample, so the sum is equal to the sample itself. That way, no need to take the average by summing and dividing by $m$.\\\n",
-    "But we don't forget about the sum and the division by $m$: we will take care of that later when we update the model parameters.\n",
+    "But we don't forget about the sum and the division by $m$: **we will take care of that later when we update the model parameters.**\n",
     "\n",
     "So we can write the expression for $dZ_2$ as:\n",
     "\n",
@@ -1342,7 +1342,7 @@
     "$$\n",
     "Where $W_2$ is the weight matrix of the second layer.\n",
     "\n",
-    "For $\\frac{\\partial A_1}{\\partial Z_1}$ it is the same logic as for $\\frac{\\partial A_2}{\\partial Z_2}$, that's why we can write:\n",
+    "For $\\frac{\\partial A_1}{\\partial Z_1}$ it is the same logic as for $\\frac{\\partial A_2}{\\partial Z_2}$ (remember the trick), that's why we can write:\n",
     "$$\n",
     "\\frac{\\partial A_1}{\\partial Z_1} = A_1 \\cdot (1 - A_1)\n",
     "$$\n",
@@ -1488,9 +1488,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2feb0b33",
+   "id": "17c43d0d",
    "metadata": {},
-   "source": []
+   "source": [
+    "Now, let's code this neural network. You'll see how easy it is now that you have done the math.\n",
+    "You didn't take any shortcuts, you did the work, and now now begins the payoff\n",
+    "\n",
+    "> let's meet in the practice_02.ipy notebook."
+   ]
   }
  ],
  "metadata": {
