--- a/notebooks/theory_02.ipynb
+++ b/notebooks/theory_02.ipynb
@@ -1494,7 +1494,7 @@
     "Now, let's code this neural network. You'll see how easy it is now that you have done the math.\n",
     "You didn't take any shortcuts, you did the work, and now now begins the payoff\n",
     "\n",
-    "> let's meet in the practice_02.ipy notebook."
+    "> let's meet in the practice_02.ipy notebook my g, the real stuff is there."
    ]
   }
  ],
